<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.sefiraat.crystamaehistoria</groupId>
  <artifactId>CrystamaeHistoria</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>
  <name>CrystamaeHistoria</name>
  <description>Slimefun Legacy maintenance build for Minecraft 1.21.11 through 26.3.</description>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>
    <slimefun.version>2025.1.2</slimefun.version>
  </properties>

  <repositories>
    <repository><id>papermc</id><url>https://repo.papermc.io/repository/maven-public/</url></repository>
    <repository><id>jitpack.io</id><url>https://jitpack.io</url></repository>
    <repository><id>mcmmo-repo</id><url>https://nexus.neetgames.com/repository/maven-public</url></repository>
    <repository><id>jeff-media-public</id><url>https://repo.jeff-media.com/public/</url></repository>
    <repository><id>bg-repo</id><url>https://repo.bg-software.com/repository/api/</url></repository>
    <repository><id>rosewood-repo</id><url>https://repo.rosewooddev.io/repository/public/</url></repository>
  </repositories>

  <build>
    <finalName>SF_CrystamaeHistoria${project.version}</finalName>
    <defaultGoal>clean package</defaultGoal>
    <resources><resource><directory>src/main/resources</directory><filtering>true</filtering></resource></resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.13.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>${project.build.sourceEncoding}</encoding>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.48</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Xlint:deprecation</arg>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-enforcer-plugin</artifactId><version>3.5.0</version>
        <executions><execution><goals><goal>enforce</goal></goals><configuration><rules>
          <requireJavaVersion><version>[25,)</version></requireJavaVersion>
          <requireMavenVersion><version>[3.9,)</version></requireMavenVersion>
        </rules></configuration></execution></executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-shade-plugin</artifactId><version>3.6.0</version>
        <executions><execution><phase>package</phase><goals><goal>shade</goal></goals><configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <relocations>
            <relocation><pattern>io.github.mooy1.infinitylib</pattern><shadedPattern>io.github.sefiraat.crystamaehistoria.libs.infinitylib</shadedPattern></relocation>
            <relocation><pattern>org.bstats</pattern><shadedPattern>io.github.sefiraat.crystamaehistoria.libs.bstats</shadedPattern></relocation>
            <relocation><pattern>de.slikey</pattern><shadedPattern>io.github.sefiraat.crystamaehistoria.libs.effectlib</shadedPattern></relocation>
            <relocation><pattern>com.jeff_media.morepersistentdatatypes</pattern><shadedPattern>io.github.sefiraat.crystamaehistoria.libs.morepersistentdatatypes</shadedPattern></relocation>
          </relocations>
          <filters>
            <filter><artifact>*:*</artifact><excludes><exclude>META-INF/MANIFEST.MF</exclude><exclude>META-INF/*.SF</exclude><exclude>META-INF/*.RSA</exclude><exclude>META-INF/*.DSA</exclude></excludes></filter>
            <filter><artifact>com.elmakers.mine.bukkit:EffectLib</artifact><excludes><exclude>plugin.yml</exclude></excludes></filter>
          </filters>
        </configuration></execution></executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency><groupId>io.papermc.paper</groupId><artifactId>paper-api</artifactId><version>${paper.version}</version><scope>provided</scope></dependency>
    <dependency><groupId>com.github.SlimefunGuguProject</groupId><artifactId>Slimefun4</artifactId><version>${slimefun.version}</version><scope>provided</scope></dependency>
    <dependency><groupId>org.bstats</groupId><artifactId>bstats-bukkit</artifactId><version>3.2.1</version></dependency>
    <dependency><groupId>com.google.code.findbugs</groupId><artifactId>annotations</artifactId><version>3.0.1u2</version><scope>provided</scope></dependency>
    <dependency><groupId>com.jeff-media</groupId><artifactId>MorePersistentDataTypes</artifactId><version>2.4.0</version></dependency>
    <dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>1.18.48</version><scope>provided</scope></dependency>
    <dependency><groupId>com.github.TheBusyBiscuit</groupId><artifactId>ExoticGarden</artifactId><version>a2c4b6d</version><scope>provided</scope></dependency>
    <dependency><groupId>com.gmail.nossr50.mcMMO</groupId><artifactId>mcMMO</artifactId><version>2.1.217</version><scope>provided</scope><exclusions><exclusion><groupId>*</groupId><artifactId>*</artifactId></exclusion></exclusions></dependency>
    <dependency><groupId>com.elmakers.mine.bukkit</groupId><artifactId>EffectLib</artifactId><version>9.4</version></dependency>
    <dependency><groupId>com.bgsoftware</groupId><artifactId>WildStackerAPI</artifactId><version>2022.6</version><scope>provided</scope></dependency>
    <dependency><groupId>dev.rosewood</groupId><artifactId>rosestacker</artifactId><version>1.5.1</version><scope>provided</scope></dependency>
    <dependency><groupId>com.github.Sefiraat</groupId><artifactId>Netheopoiesis</artifactId><version>8d1af6c570</version><scope>provided</scope></dependency>
    <dependency><groupId>io.github.mooy1</groupId><artifactId>InfinityLib</artifactId><version>7e03c79</version></dependency>
  </dependencies>
</project>
